<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/textview"/>
    <Button
        android:id="@+id/button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BINTODEC"/>
    <Button
        android:id="@+id/button_id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DECTOBIN"/>
    <Button
        android:id="@+id/button_id3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BINTOHEX"/>
    <Button
        android:id="@+id/button_id4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HEXTOBIN"/>
    <Button
        android:id="@+id/button_id5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DECTOHEX"/>
    <Button
        android:id="@+id/button_id6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HEXTODEC"/>
</LinearLayout>
